# ANNS-Parrallel

./: .gitignore
MPI/: CMakeLists.txt  adc_searcher.h  hnsw_hnsw_index.h  hnsw_hnsw_searcher.h  hnsw_index.h  hnsw_searcher.h  ivf_hnsw_index.h  ivf_hnsw_searcher.h  ivfpq_index.h  kmeans.h  main.cc  main_neon.cc  profiler.h  sdc_searcher.h  searcher.h  thread_pool.h
MPI/plot/: data_loader.py  plot1_neon_scaling.py  plot2_x86_vs_neon.py  plot3_algo_compare_nodes.py  plot4_ivfpq_mpi_vs_pthread.py
Pthread/: adc_searcher.h  fast_scan_kernel.h  ivfpq_index.h  main.cc  pq_distance.h  sdc_searcher.h
Pthread/viz/: aggregate_runs.py  data_loader.py  generate_report_figures.py  generate_scheduling_figures.py  plot_adc_sdc.py  plot_query_profile.py  plot_speedup.py  plot_stage_breakdown.py  report_config.yaml  requirements.txt  run_all.py  run_query_profile.py  run_scheduling_plots.py
SIMD/: distance.h  fast_scan.h  flat_scan.h  offline.py  plot_profiler.py  plot_tradeoff.py  pq_quantization.h  scan.h  sq_quantization.h
